# collision_restraint

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/collision_restraint/: collision_restraint.hpp  footprint.hpp  model.hpp  point.hpp  polar_line.hpp  polar_point.hpp  utility.hpp  visibility_control.h
src/: collision_restraint.cpp  footprint.cpp  model.cpp  node.cpp  point.cpp  polar_line.cpp  polar_point.cpp
test/: model_test.cpp  polar_line_test.cpp
